# advent-of-code

./: .gitignore  AdventOfCode.cs  AdventOfCode.java  Directory.Build.props  README.adoc  README.md  advent-of-code.csproj  answers  aoc.d  aoc_rs.rs  build.gradle.kts  build.sh  c.mk  commontargets.mk  cpp.mk  d.mk  dotnet.di  guile.di  java.di  java.mk  lua.di  main.d  meson.build  mise.toml  module-info.java  plopfile.js  python.c  python.di  registry.d  rust.mk  scala.mk
2015/: .gitignore  day1.rs  day2.rs
2015/.cargo/: config
2015/01/: .gitignore  Cargo.toml  Makefile  aoc2015_01.c  aoc2015_01.js  aoc2015_01.pl  aoc2015_01.py  aoc2015_01.rs  c.lit
2015/02/: Cargo.toml  aoc2015_02.rs
2015/03/: aoc2015_03.py
2015/04/: Makefile  aoc2015_04.c  aoc2015_04.rb
2015/05/: aoc2015_05.pl
2016/: .gitignore  day  day.bat  day1.rs  day11.rs  day12.rs  day13.rs  day15.rs  day16.rs  day18.rs  day19.rs  day2.rs  day20.rs  day21.rs  day22.rs  day23.rs  day24.rs  day25.rs  day3.rs  day6.rs  day7.rs  day8.rs  day9.rs
2016/day10/: Cargo.toml
2016/day14/: Cargo.toml
2016/day17/: Cargo.toml
2016/day20/: Cargo.toml
2016/day4/: Cargo.toml
2016/day5/: Cargo.toml
2016/day5-c++/: .gitignore  Makefile  day5.vcxproj  main.cpp  md5-cng.cpp  md5-cng.h  md5-openssl.cpp  md5-openssl.h  md5.h
2017/: .gitignore  c++.mk  c.mk  d.mk  java.mk  rust.mk
2017/.cargo/: config
2017/01/: Cargo.toml  Makefile  python.py  ruby.rb  rust.rs  test1.rb
2017/02/: python.py
2017/03/: python.py
2017/04/: perl6.pl
2017/05/: Cargo.toml  Makefile  c++.c++  c.c  clojure.clj  d.d  node.js  python.py  ruby.rb  rust.rs
2017/06/: ruby.rb
2017/07/: Makefile  c++.c++
2017/08/: perl6.pl
2017/09/: ruby.rb
2017/10/: python.py
2017/11/: ruby.rb
2017/12/: ruby.rb
2017/13/: Makefile  d.d
2017/14/: python.py
2017/15/: Makefile  d.d
2017/16/: ruby.rb
2017/17/: Makefile  d.d
2017/18/: ruby.rb
2017/19/: python.py
2017/20/: python.py
2017/21/: ruby.rb
2017/22/: python.py
2017/23/: ruby.rb
2017/24/: Makefile  d.d
2017/25/: python.py
2018/01/: .gitignore  Makefile  ruby.lit
docs/: _config.yml  index.html  index.md
docs/_posts/: 2017-12-01-inverse-captcha.md  2017-12-02-corruption-checksum.md  2017-12-03-spiral-memory.md  2017-12-04-high-entropy-passphrases.md  2017-12-05-a-maze-of-twisty-trampolines-all-alike.md  2017-12-06-memory-reallocation.md  2017-12-07-recursive-circus.md  2017-12-08-i-heard-you-like-register.md  2017-12-09-stream-processing.md  2017-12-10-knot-hash.md  2017-12-11-hex-ed.md  2017-12-12-digital-plumber.md  2017-12-13-packet-scanners.md
plop-templates/: c.hbs  csharp.hbs  d.hbs  python.hbs
y2015/d01/: JavaY2015D01.java  c.c  cpp.cpp  csharp.cs  d.d  guile.scm  javascript.js  lua.lua  python.py  ruby.rb  rust.rs
y2015/d02/: JavaY2015D02.java  c.c  cpp.cpp  csharp.cs  d.d  guile.scm  javascript.js  lua.lua  python.py  ruby.rb  rust.rs
y2015/d03/: JavaY2015D03.java  c.c  cpp.cpp  csharp.cs  d.d  guile.scm  javascript.js  lua.lua  python.py  ruby.rb  rust.rs
y2015/d04/: JavaY2015D04.java  csharp.cs  d.d  javascript.js  (+2 more)
(+44 files in other folders)
